--- a/examples/500.html
+++ b/examples/500.html
@@ -17,5 +17,8 @@
   <body>
     <!-- response:status-code=500 -->
     <!-- ...Content... -->
+    <script type="text/javascript">
+      window.IS_RENDERED = true;
+    </script>
   </body>
 </html>
