--- a/examples/500.html
+++ b/examples/500.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://example.com/not-exists/">
 
     <script type="text/javascript">
-      window.IS_RENDERED = true;
+      window.IS_RENDERED = false;
     </script>
   </head>
   <body>
