--- a/examples/index.html
+++ b/examples/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- ...Content... -->
     <script type="text/javascript">
-      async(function (err, res) {
+      asyncFunc(function (err, res) {
         // More synchronous code here
         window.IS_RENDERED = true;
       });
