--- a/examples/500.html
+++ b/examples/500.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="fragment" content="!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="canonical" href="https://example.com/not-exists/">
+    <link rel="canonical" href="https://example.com/error-page/">
 
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <meta content="noindex, nofollow" name="robots">
